@startuml

title __BUSINESS's Class Diagram__\n

  package business {
    class Employee {
        + Employee()
        + changeJob()
        + getId()
        + getPerson()
        + getJob()
    }
  }
  

  package business {
    class EmployeeBuilder {
        {static} - id : ID
        {static} - person : Person
        {static} - job : Job
        {static} + clear()
        {static} + build()
        {static} + buildAndClear()
        {static} + setId()
        {static} + setPerson()
        {static} + setJob()
    }
  }
  

  package business {
    class EmployeeManager {
        {static} - ourInstance : EmployeeManager
        ~ employees : ObservableList<Employee>
        {static} + getInstance()
        - EmployeeManager()
        + getEmployees()
        + getEmployee()
        + getEmployee()
        + hireEmployee()
        + fireEmployee()
        + fireEmployee()
        + fireEmployee()
        + updateEmployee()
    }
  }
  

  Employee o-- ID : id
  Employee o-- Person : person
  Employee o-- Job : job


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
